--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <title>GLTF Loading in THREE.js</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="./style.css" />
   </head>
 
-  <body>
+  <body style="font-family: 'Kumar One Outline', cursive; ">
+    <div style="position:absolute;z-index: 1;color: white"><h1>Atharva</h1></div>
+
     <script>
       console.clear()
     </script>
@@ -18,7 +21,6 @@
     <script src="https://unpkg.com/three@0.87.1/examples/js/loaders/GLTFLoader.js"></script>
     <script src="js/epmrgo.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
-
     <script src="./script.js"></script>
   </body>
 </html>
